--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,7 +9,7 @@
 					<a class="nav-link active" href="/">Home</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link active" href="/help">Help</a>
+					<a class="nav-link active" href="/changelog">Change Log</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link active" href="/about">About</a>
