--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,24 +11,36 @@
 		<div class="container pt-5">
 			<div class="row">
 				<div class="col-12" style="margin-top: 10vh;">
-					<h2>AutoAuth for ruqqus</h2>
-					<p>Automatic and secure way to get <strong>ruqqus</strong> api authentication token</p>
+					<h2>Rainbow Comments for ruqqus</h2>
+					<p>Automatic generation of rainbow comments for <strong>Ruqqus</strong></p>
 					<hr>
 					<div class="card automatic">
 						<p>
-							Fast and automatic way to get ruqqus access token for developing or testing
-							purposes
+							Easy to use (Like Ruqqus Vue)
+							<ul>
+								<li>
+									Copies to clipboard automatically
+								</li>
+								<li>
+									Doesn't require Linux (at least on your part)
+								</li>
+							</ul>
 						</p>
 					</div>
 					<div class="card automatic">
 						<p>
-							None of the data is logged, and all of the temporary data (app state...) gets deleted with
-							user session, so there is no way for anyone to see any of the private data.
+							Great results
+							<br>
+							<img src="https://i.imgur.com/tUpnoGx.png">
 						</p>
 					</div>
 					<div class="card automatic">
 						<p>
-							The app code is open source on GitHub, and the app gets build from it
+							Website designed by Panjkrc
+							<br>
+							Content designed by OsrsNeedsF2P
+							<hr>
+							Source code available here: <a href="https://github.com/Ruqqus-API/Rainbow-Comments">https://github.com/Ruqqus-API/Rainbow-Comments</a>
 						</p>
 					</div>
 
