--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -20,7 +20,7 @@
 			</ul>
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active">
-					<a class="nav-link active" href="https://github.com/Panjkrc/ruqqus-auth" target="blank"><i class="fab fa-github"></i></a>
+					<a class="nav-link active" href="https://github.com/Ruqqus-API/Rainbow-Comments" target="blank"><i class="fab fa-github"></i></a>
 				</li>
 			</ul>
 		</div>
