automatically reselect comment field for UX

--- a/views/changelog.ejs
+++ b/views/changelog.ejs
@@ -16,6 +16,9 @@
 							<hr>
 							<div class="card automatic">
 								<p>
+									<strong>v1.3</strong> Comment field gets automatically reselected for better UX
+								</p>
+								<p>
 									<strong>v1.2</strong> Text is now automatically copied to the clipboard
 								</p>
 								<p>
